tests/functional/data/transpiler/common/errors/dim/dimorder_too_big_index.err
dimorder_too_big_index.cpp:3:37: error: [@dimOrder] Dimensions must be in range [0, 1]
    3 | @kernel void hello_kern(mat89_f mat @dimOrder(1, 2)) {
      |                                     ^
